test/expected/explain_cfi.out
explain class C : int
                  ^
19: error: class can not specify an underlying type
